@@ -1,3 +1,5 @@
+HEAD
+	+ Fix bug with shared state for shares and roaming profiles sync
 5.1.1
 	+ Add administrators also to write list in smb.conf
 5.1
